--- a/index.html
+++ b/index.html
@@ -41,7 +41,11 @@
               <br>
               <div id="underScore"> </div>
               <div class="wrongGuess">wrong guess</div> 
-              
+              <audio controls autoplay>
+                <source src="we-wish-you-a-merry-christmas.mp3" type="audio/ogg">
+                <source src="we-wish-you-a-merry-christmas.mp3" type="audio/mpeg">
+                Your browser does not support the audio tag.
+              </audio>
               
             </div>
         </div>
